testsuite/tests/v1/bin_op/logic/or/non_bool/test.out
Error: Invalid expression type
   ╭─[ <working-dir>/script.lkql:3:15 ]
   │
 3 │ print(bool or "")
   │               ─┬  
   │                ╰── Expecting a "Bool", got a "Str"
───╯
